--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
 		<title>Form Validator</title>
 	</head>
 	<body>
+		<form action="#">
+			<div class="head">Form Validator</div>
+			<div class="name input">
+				<label for="name">Name</label>
+				<input type="text" class="--name" />
+				<p>Incorrect Name</p>
+			</div>
+			<div class="email input">
+				<label for="email">Email</label>
+				<input type="text" class="--email" />
+				<p>Incorrect Email</p>
+			</div>
+			<div class="pw input">
+				<label for="pw">Password</label>
+				<input type="password" class="--pw" />
+				<p>Incorrect Password</p>
+			</div>
+			<div class="pw-con input">
+				<label for="pw-con">Password Confirm</label>
+				<input type="password" class="pw--con" />
+				<p>Password do not match</p>
+			</div>
+			<button type="submit">Submit</button>
+		</form>
 		<script src="script.js"></script>
 	</body>
 </html>
